LC_0018_4Sum :: Быстрое решение